fix most layout bugs in outlook, and app link image sizes

--- a/scripts/report/generation/stylesheets/report.css
+++ b/scripts/report/generation/stylesheets/report.css
@@ -59,14 +59,15 @@ img.text-center {
     margin: 0 auto;
 }
 
-table.bar-chart tr {
+table.bar-chart.right tr {
     padding: 0;
+    margin: 0 auto;
 }
 
-table.bar-chart td {
+table.bar-chart.right td {
 
     text-align: center;
-    line-height: 44px;
+  /*  line-height: 44px; */
     height: 44px;
 
 }
@@ -107,10 +108,8 @@ td.cellbox {
     font-size: 18px;
     font-weight: 400;
     line-height: 25px;
-}
-
-td.cellbox {
     vertical-align: center;
+
 }
 
 
